Fix can not read row type in trino version > 422 (#49)